Fix contrast errors in the navbar and principles list

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -66,20 +66,20 @@ a:hover {
 
 #nav-heading {
     font-size: 25px;
-    color: #Effbed;
+    color: white;
 }
 
 .navbar-dark .navbar-nav,
 .navbar-dark .navbar-nav .nav-link,
 .navbar-dark .navbar-toggler-icon {
-    color: #Effbed;
+    color: white;
 }
 
 .navbar-dark .navbar-nav .nav-link:hover,
 .dropdown-item:hover,
 .navbar-active {
-    color: #effbed;
-    background-color: #C97064;
+    color: #007842;
+    background-color: white;
 }
 
 /* Header */
@@ -564,13 +564,8 @@ textarea#id_message.textarea {
 
 /* for iphones */
 @media screen and (max-width: 390px) {
-/* 
-    li input,
-    li select,
-    .input-group.date {
-        float: right;
-        padding-top: 5px;
-    } */
+
+
 
     #id_requested_time {
         margin-bottom: 20px;
